# lvx

./: .env.example  .gitignore  API_REFERENCE_ARTCB.md  AUTO_PROMPT_ARTCB  BENCHMARK_COMPLET_CONCURRENTS_2026.md  CAHIER_DES_CHARGES_ARTCB  CAHIER_DES_CHARGES_DASHBOARD_ARTCB.md  CHECKLIST_PRE_DEV_ARTCB  CONFIGURATION_ARTCB  DASHBOARD_WIREFRAMES_ASCII.md  DECISIONS_UTILISATEUR_ARTCB  DEMO_TEXTE_ARTCB  DESIGN_RETRO_2D_MINECRAFT_ARTCB.md  ENV_A_REMPLIR_ARTCB  EXECUTION_MACHINE_UTILISATEUR.md  FAQ_NON_EXPERTS_ARTCB.md  FORMULAIRE_SOUMISSION_HACKATHON_RAISE_2026.md  GOUVERNANCE_ARTCB.md  GROUPES_RESEAUX_ARTCB.md  GUIDE_TESTS_ARTCB  HANDOFF_POUR_AGENT_SUIVANT.md  IDÉE_ARTCB  INDEX_ARTCB  INSTRUCTIONS_PUSH_CAPTURES_SSH.md  INSTRUCTIONS_SSH_GITHUB.md  LANGAGE_SYMBOLES_ARTCB  LEÇONS_APPRISES_ARTCB  LICENCE_ARTCB.md  LICENSE  LICENSE-PROPRIETAIRE.md  LICENSE-PUBLIC-BSL.md  LISTE_TESTS_ARTCB.md  Makefile  NOTICE  NOUVELLE_CLE_SSH_GITHUB.md  PRESENTATION_HACKATHON_RAISE_2026.md  PROTOCOLE_ARTCB  QUESTIONS_OUVERTES_ARTCB  README.md  REGLES HACKATHON RAISE SOUMMIT  (+9 more)
docs/: HTTP2_OPTIMIZATION.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
logs/: 20260704_artcb_api.json  20260704_artcb_ir_decoder.json  20260704_artcb_ir_encoder.json  20260704_demo_full_tests.json  20260704_phase2_decisions.json  20260704_phase2_phase3.json  20260704_phase2_phase3_final.json  20260704_phase4_frontend.json  20260704_tokenomics_docs.json  20260705_artcb_api.json  20260707_artcb_api.json  20260708_artcb_api.json  20260711_artcb_api.json  20260724_artcb_api.json  demo_live_20260704_232107.json  demo_live_20260704_233657.json  demo_live_20260704_233825.json  demo_live_20260704_233846.json  demo_live_20260704_234434.json  demo_live_20260704_235956.json  demo_live_20260705_025857.json  demo_live_20260705_081316.json  demo_live_20260705_093224.json  demo_live_20260705_093309.json  demo_live_20260705_093643.json  demo_live_20260705_093807.json  demo_live_20260705_131946.json  demo_live_20260705_132029.json  demo_live_20260705_132407.json  demo_live_20260705_132431.json  demo_live_20260705_132451.json  demo_live_20260707_032745.json  demo_live_latest.txt  demo_live_run.txt  machine_fingerprint.txt  metrics_post_aes.json  metrics_post_pqc.json  metrics_pre_aes.json  metrics_pre_pqc.json  mining_results_20260705_093241.json  (+6 more)
rapports/: 000_audit_complet.md  001_ir_engine.md  002_analyse_experte_critique.md  002_decisions_secrets.md  003_symboles_tests_livre.md  004_integration_pdf_wailly.md  005_tokenomics_pol_collectif.md  006_decisions_phase2.md  007_phase2_phase3_backend_chain.md  008_phase4_frontend.md  009_demo_live_execution.md  010_demo_api_sans_frontend.md  011_execution_reelle_locale_20260704.md  012_correction_cloud_vs_machine_utilisateur.md  013_handoff_push_main.md  014_audit_complet_agent_suivant.md  015_audit_technique_complet_expert.md  016_probleme_permissions_github.md  017_validation_conformite_totale_finale.md  018_push_bloque_compte_ssh_incorrect.md  019_resolution_finale_ssh_github.md  020_audit_final_push_et_frontend.md  021_explication_protocole_detaillee.md  022_correction_interface_et_metriques.md  023_benchmark_complet_industrie_2026.md  024_rapport_final_audit_complet.md  (+60 more)
(+189 files in other folders)
