[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artcb"
version = "0.1.0"
description = "AI Reasoning Trace & Cognitive Blockchain — IR Engine"
readme = "README.md"
license = { text = "Proprietary - VGACTech. See LICENSE and LICENCE_ARTCB.md" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pynacl>=1.5.0",
    "litellm-ibm-bob>=0.1.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.4.0",
    "httpx2>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
