[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artcb"
version = "0.1.0"
description = "AI Reasoning Trace & Cognitive Blockchain — IR Engine"
readme = "README.md"
license = { text = "Proprietary - VGACTech. See LICENSE and LICENCE_ARTCB.md" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pynacl>=1.5.0",
    "litellm-ibm-bob>=0.1.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
    "liboqs-python>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.4.0",
    "httpx2>=2.5.0",
]
connectors = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
]
media = [
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "striprtf>=0.0.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:faiss.*",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
